<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/preencha_seus_dados" />

    <EditText
        android:id="@+id/nomeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nome"
        android:minHeight="48dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/sobrenomeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/sobrenome"
        android:minHeight="48dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"
        android:minHeight="48dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/estadoCivilSp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/estado_civil"
        android:minHeight="48dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="5dp"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/femininoRb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/feminino"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/masculinoRb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/masculino"
            />
    </RadioGroup>

    <Button
        android:id="@+id/salvarBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"

        />

    <Button
        android:id="@+id/limparBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpar"

        />
</LinearLayout>